--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/Users/skylergkruger/code/Tic-Tac-Toe/style.css">
     <script defer src="/Users/skylergkruger/code/Tic-Tac-Toe/js/main.js"></script>
 </head>
 <body>
-<header>Tic-Tac-Toe</header>    
+<header><strong>Tic-Tac-Toe</strong></header>    
 <h1>Player One, You're Up.</h1>
 <section id="board">
     <div id="c0r2"></div>
