--- a/index.html
+++ b/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/Users/skylergkruger/code/Tic-Tac-Toe/style.css">
-    <script defer src="/Users/skylergkruger/code/Tic-Tac-Toe/js/main.js"></script>
-</head>
-<body>
-<header><strong>Tic-Tac-Toe</strong></header>    
-<h1>Player One, You're Up.</h1>
-<section id="board">
-    <div id="c0r2"></div>
-    <div id="c1r2"></div>
-    <div id="c2r2"></div>
-    
-    <div id="c0r1"></div>
-    <div id="c1r1"></div>
-    <div id="c2r1"></div>
-  
-    <div id="c0r0"></div>
-    <div id="c1r0"></div>
-    <div id="c2r0"></div>
-</section>
-<button>RESET GAME</button>
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="/Users/skylergkruger/code/Tic-Tac-Toe/style.css"
+    />
+  </head>
+  <body>
+    <header><strong>Tic-Tac-Toe</strong></header>
+    <h1>Player One, You're Up.</h1>
+    <section id="board">
+      <div id="c0r2"></div>
+      <div id="c1r2"></div>
+      <div id="c2r2"></div>
+
+      <div id="c0r1"></div>
+      <div id="c1r1"></div>
+      <div id="c2r1"></div>
+
+      <div id="c0r0"></div>
+      <div id="c1r0"></div>
+      <div id="c2r0"></div>
+    </section>
+    <button>RESET GAME</button>
+    <script defer src="js/main.js"></script>
+  </body>
 </html>
