Begin winning logic

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header><strong>Tic-Tac-Toe</strong></header>
     <h1>Player One, You're Up.</h1>
-    <section id="board">
+    <section id="board" class="sqares">
       <div id="c0r2"></div>
       <div id="c1r2"></div>
       <div id="c2r2"></div>
